--- a/bin/src/main/resources/templates/registration.html
+++ b/bin/src/main/resources/templates/registration.html
@@ -57,7 +57,7 @@
 				about the account types</span>
 			<label th:for="role">Account type:</label> 
 			<select class="w3-select w3-border" th:field="*{role}">
-				<option th:each="r : ${T(ujfaA.springQuiz.model.Role).values()}"
+				<option th:each="r : ${T(ujfaA.springQuiz.entities.Role).values()}"
 					class="w3-border-white w3-hover-border-green"
 					th:value="${r}" th:text="${r.displayValue}"></option>
 			</select>
